--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -1,28 +1,45 @@
 <table class="table table-cv table-sm table-borderless table-responsive table-cv-map">
-  {% assign skip_basics = 'image,profiles,location' | split: ',' %}
-  {% for content in data[1] %}
-    {%
-      if (content[1] == "") or (skip_basics contains
-      content[0])
-    %}
+  {% assign skip_basics = 'profiles' | split: ',' %}
+  {% for content in site.data.resume.basics %}
+    {% if content[0] == 'location' %}
+      <tr>
+        <td class="p-1 pr-2 font-weight-bold"><b>Location</b></td>
+        <td class="p-1 pl-2 font-weight-light text">
+          {{ content[1].address }}, {{ content[1].city }}, {{ content[1].region }} {{ content[1].postalCode }}, {{ content[1].countryCode }}
+        </td>
+      </tr>
+    {% elsif content[0] == 'image' %}
       {% continue %}
-    {% endif %}
-
-    <tr>
-      <td class="p-1 pr-2 font-weight-bold">
-        <b>{{ content[0] | capitalize }}</b>
-      </td>
-      <td class="p-1 pl-2 font-weight-light text">
-        {% if content[0] == 'url' %}
-          <a href="{{ content[1] }}" target="_blank" rel="noopener noreferrer">{{ content[1] }}</a>
-        {% elsif content[0] == 'email' %}
-          <a href="mailto:{{ content[1] }}" target="_blank">{{ content[1] }}</a>
-        {% elsif content[0] == 'phone' %}
-          <a href="tel:{{ content[1] }}">{{ content[1] }}</a>
-        {% else %}
+    {% elsif content[0] == 'label' %}
+      <tr>
+        <td class="p-1 pr-2 font-weight-bold"><b>Current Position</b></td>
+        <td class="p-1 pl-2 font-weight-light text">
           {{ content[1] }}
-        {% endif %}
-      </td>
-    </tr>
+        </td>
+      </tr>
+    {% elsif (content[1] == "") or (skip_basics contains content[0]) %}
+      {% continue %}
+    {% else %}
+      <tr>
+        <td class="p-1 pr-2 font-weight-bold"><b>{{ content[0] | capitalize }}</b></td>
+        <td class="p-1 pl-2 font-weight-light text">
+          {% if content[0] == 'url' %}
+            <a href="{{ content[1] }}" target="_blank" rel="noopener noreferrer">{{ content[1] }}</a>
+          {% elsif content[0] == 'email' %}
+            <a href="mailto:{{ content[1] }}" target="_blank">{{ content[1] }}</a>
+          {% elsif content[0] == 'phone' %}
+            <a href="tel:{{ content[1] }}">{{ content[1] }}</a>
+          {% else %}
+            {{ content[1] }}
+          {% endif %}
+        </td>
+      </tr>
+    {% endif %}
   {% endfor %}
 </table>
+
+{% if site.data.resume.basics.image %}
+<div class="mt-3">
+  <img class="img-fluid rounded" style="max-width: 100%;" src="{{ site.data.resume.basics.image | prepend: '/assets/img/' | relative_url }}" alt="{{ site.data.resume.basics.name }}">
+</div>
+{% endif %}
