--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,6 +23,8 @@ $light-purple-color: color.adjust($purple-color, $lightness: 25%);
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
 $yellow-color: #efcc00 !default;
+$green-color-olive: #4c6519 !default;
+$green-color-olive-light: color.adjust($green-color-olive, $lightness: 25%, $saturation: -20%);
 
 $grey-color: #828282 !default;
 $grey-color-light: color.adjust($grey-color, $lightness: 40%);
