--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1417,3 +1417,18 @@ figure.cover {
     color: #23212d !important;
   }
 }
+
+a.mybtn {
+  color: var(--global-text-color);
+  border: 1px solid var(--global-text-color);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  margin-left: 0;
+
+  &:hover {
+    color: var(--global-theme-color);
+    border-color: var(--global-theme-color);
+  }
+}
