--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -40,22 +40,6 @@ layout: default
 
     <div class="clearfix">{{ content }}</div>
 
-    <!-- News -->
-    {% if page.announcements and page.announcements.enabled %}
-      <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
-      </h2>
-      {% include news.liquid limit=true %}
-    {% endif %}
-
-    <!-- Latest posts -->
-    {% if page.latest_posts and page.latest_posts.enabled %}
-      <h2>
-        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">latest posts</a>
-      </h2>
-      {% include latest_posts.liquid %}
-    {% endif %}
-
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
@@ -63,6 +47,48 @@ layout: default
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
+
+    <div class="row">
+      <div class="col-sm-6 mt-3 mt-md-0">
+        <!-- News -->
+        {% if page.announcements and page.announcements.enabled %}
+          <h2>
+            <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+          </h2>
+          {% include news.liquid limit=true %}
+        {% endif %}
+      </div>
+      <div class="col-sm-6 mt-3 mt-md-0">
+        <!-- Latest posts -->
+        {% if page.latest_posts and page.latest_posts.enabled %}
+          <h2>
+            <a href="{{ '/blog/' | relative_url }}" style="color: inherit">blog posts</a>
+          </h2>
+          {% include latest_posts.liquid %}
+        {% endif %}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 mt-3 mt-md-0">
+        <!-- Recent book reviews -->
+        {% if page.book_reviews and page.book_reviews.enabled %}
+          <h2>
+            <a href="{{ '/books/' | relative_url }}" style="color: inherit">book reviews</a>
+          </h2>
+          {% include latest_books.liquid %}
+        {% endif %}
+      </div>
+  
+      <div class="col-sm-6 mt-3 mt-md-0">
+        <!-- Recent movie reviews -->
+        {% if page.movie_reviews and page.movie_reviews.enabled %}
+          <h2>
+            <a href="{{ '/movies/' | relative_url }}" style="color: inherit">movie/tv reviews</a>
+          </h2>
+          {% include latest_movies.liquid %}
+        {% endif %}
+      </div>
+    </div>
 
     <!-- Social -->
     {% if page.social %}
